<resources>
    <string name="app_name">App with SQLite</string>
    <string name="register_new_user">Register new User</string>
    <string name="query_user">Query a User</string>
    <string name="query_user_spinner">Query User with Spinner</string>
    <string name="query_user_listview">Query user with List View</string>
    <string name="register_id">ID</string>
    <string name="register_name">Name</string>
    <string name="register_phone">Phone</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="select_option">Select an option...</string>
    <string name="detail_information">Detail User Information</string>
    <string name="query_user_recyclerview">Query User with Recycler View</string>
    <string name="detail_user">Detail</string>
</resources>